<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_route">New</string>
    <string name="popular_route">Popular</string>
    <string name="not_internet">Slow or no internet connection. Please check your internet settings</string>
    <string name="oh_shucks">Oh shucks!</string>
    <string name="slow_or_no_internet_connection">Slow or no internet connection. Please check your internet settings</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="imageFromGallery">imageFromGallery</string>
    <string name="info_route">Info</string>
</resources>